force-app/main/default/objects/Performance_Goal__c/Performance_Goal__c.object-meta.xml
<CustomObject>
    <label>Performance Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>