force-app/main/default/objects/Performance_Goal__c/fields/Performance_Review__c.field-meta.xml
<CustomField>
    <fullName>Performance_Review__c</fullName>
    <label>Performance Review</label>
    <referenceTo>Performance_Review__c</referenceTo>
    <relationshipLabel>Performance Goals</relationshipLabel>
    <relationshipName>Performance_Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>