force-app/main/default/objects/Performance_Goal__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <label>Target Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>